Cập nhật code mới và thay thế code cũ

--- a/NMproject/NMproject/src/main/resources/application.properties
+++ b/NMproject/NMproject/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 spring.application.name=NMproject
 server.port=8081
-#server.address=172.16.246.175
-spring.datasource.url=jdbc:postgresql://dpg-ctcq3ai3esus73bkn6vg-a:5432/seintro
+
+spring.datasource.url=postgresql://seintro_user:iPa7LBTGouRoiXXS2S1DJE7g61cydgCs@dpg-ctcq3ai3esus73bkn6vg-a.oregon-postgres.render.com/seintro
 spring.datasource.username=seintro_user
 spring.datasource.password=iPa7LBTGouRoiXXS2S1DJE7g61cydgCs
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ProjectPMS
-#spring.datasource.username=postgres
-#spring.datasource.password=postgre
 spring.datasource.driver-class-name=org.postgresql.Driver
+logging.level.org.springframework=DEBUG
 
-
+# JPA settings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC+7
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=UTC
+spring.resources.static-locations=file:/D:/test/NMproject/src/main/resources/static/
+
+
+
+
+	
