Cập nhật code mới và thay thế code cũ

--- a/NMproject/NMproject/src/main/resources/application.properties
+++ b/NMproject/NMproject/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=NMproject
 server.port=8081
 
-spring.datasource.url=postgresql://seintro_user:iPa7LBTGouRoiXXS2S1DJE7g61cydgCs@dpg-ctcq3ai3esus73bkn6vg-a.oregon-postgres.render.com/seintro
-spring.datasource.username=seintro_user
-spring.datasource.password=iPa7LBTGouRoiXXS2S1DJE7g61cydgCs
+spring.datasource.url=jdbc:postgresql://localhost:5432/NMproject
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.springframework=DEBUG
 
