--- a/NMproject/NMproject/src/main/resources/application.properties
+++ b/NMproject/NMproject/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=UTC
 spring.resources.static-locations=file:/D:/test/NMproject/src/main/resources/static/
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
